src/objects/SSIS_Global_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Account_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campgain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campgain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consignment_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consignment Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Address_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Address Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Address_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Address Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENDO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ENDO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Type__c</fullName>
        <label>ERP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Movex</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMPL__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IMPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market/Company</label>
        <referenceTo>SSIS_ERP_SKU_Metadata_Country_Connectio__c</referenceTo>
        <relationshipLabel>SSIS: Global Settings</relationshipLabel>
        <relationshipName>SSIS_Global_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ORTH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Others_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Others/Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PROS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Area/Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Setup__c</fullName>
        <label>SFDC Setup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DentsplySirona Implants</fullName>
                </value>
                <value>
                    <fullName>Global CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrackWise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TrackWise</label>
        <type>Checkbox</type>
    </fields>
    <label>SSIS: Global Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>SSIS: Global Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSIS: Global Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>